[gd_scene load_steps=2 format=2]

[ext_resource path="res://boxes/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="." to="." method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="." to="." method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
